--- a/src/blocks/components/button/button.pug
+++ b/src/blocks/components/button/button.pug
@@ -12,6 +12,9 @@ a(href).button-black Link Кнопка
 
 .mark Техобслуживание
 
+
+.button.button-transparent Сбросить
+
 h1.h1  Популярное 
 h2.h2 Популярное
 h3.h3  Популярное
