--- a/src/blocks/components/article-detail/article-detail.pug
+++ b/src/blocks/components/article-detail/article-detail.pug
@@ -42,10 +42,11 @@ section.article-detail
                 |колесом будет левое переднее, третьим — заднее левое, четвертым — переднее правое.
 
             h2 Последовательность замены
+
+            p
+                | В большинстве случаев замена тормозной жидкости проводится по следующему
+                | алгоритму (первый, так называемый последовательный способ):
             ul
-                li
-                    |В большинстве случаев замена тормозной жидкости проводится по следующему
-                    |алгоритму (первый, так называемый последовательный способ):
                 li
                     |Машина загоняется на эстакаду или подъемник таким образом, чтобы был нормальный доступ к тормозным цилиндрам (их штуцерам).
                 li
@@ -81,7 +82,7 @@ section.article-detail
                 |диагональная схема). Очень желательно для этого все же загнать машину на
                 |смотровую яму с тем, чтобы у вас был нормальный доступ к цилиндрам.
 
-            img(src="img/articles-auto1.jpg", alt="")
+            //img(src="img/articles-auto1.jpg", alt="")
 
             p Второй метод замены, параллельный подразумевает выполнение следующих действий:
             ul
@@ -94,9 +95,9 @@ section.article-detail
                 li постепенное заполнение системы ТЖ вместе с параллельной ее прокачкой.
 
                 li Как было упомянуто выше, такой способ также имеет право на существование, однако в силу его малого удобства и трудовых и временных затрат его редко используют.
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/7iGFH5HbWGM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe src="https://player.vimeo.com/video/25924530?portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-        .article-content
+            <iframe width="844" height="412" src="https://www.youtube.com/embed/7iGFH5HbWGM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            //<iframe src="https://player.vimeo.com/video/25924530?portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        .article-content.article-content_activites
             .article-bottom
                 .article-bottom__item
                     a(href="javascript:void(0)").add-to-favorite.js-add-to-favorite Добавить в избранное
