--- a/src/blocks/components/comment/comment.pug
+++ b/src/blocks/components/comment/comment.pug
@@ -5,7 +5,7 @@
             name: 'Иван Сидоров',
             date: '02.04.2019',
             text: 'Видел такой сервис... ключевые заголовки на странице меняются под поисковый запрос. Не думал, что это тайна вообще ' +
-            'Видел такой сервис... ключевые заголовки на странице меняются под поисковый запрос. Не думал, что это тайна вообще',
+            'Видел такой сервис...',
             answer: false
         },
         {
