--- a/src/blocks/components/personal-area-head/_personal-area-head.scss
+++ b/src/blocks/components/personal-area-head/_personal-area-head.scss
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   padding: 37px 40px 28px;
   margin-bottom: 12px;
+  margin-top: -15px;
 
   @include lg-block {
     & .personal-auto {
