--- a/src/data/car-repair.pug
+++ b/src/data/car-repair.pug
@@ -10,7 +10,7 @@
 		type: 'card'
 	},{
 		img: "img/card.jpg",
-		title: "Замена ремня ГРМ на Chery Tiggo с двигателем Acteco 1,8 Замена ремня ГРМ на Chery Tiggo с двигателем Acteco 1,8",
+		title: "Замена ремней привода ГРМ и ТНВД на Audi A6 2.5 TDI V6 ",
 		type: 'card'
 	},
 	{
@@ -39,7 +39,7 @@
 	},
 	{
 		img: "img/card.jpg",
-		title: "Замена тормозной жидкости",
+		title: "Замена ремня ГРМ на Chery Tiggo с двигателем Acteco 1,8",
 		type: 'card'
 	},
 	{
@@ -48,11 +48,11 @@
 	},
 	{
 		img: "img/card.jpg",
-		title: "Замена тормозной жидкости",
+		title: "Замена ремня ГРМ на Chery Tiggo с двигателем Acteco 1,8",
 		type: 'card'
 	},
 	{
 		img: "img/card.jpg",
-		title: "Замена тормозной жидкости",
+		title: "Замена ремней привода ГРМ и ТНВД на Audi A6 2.5 TDI V6",
 		type: 'card'
 	}];
