--- a/src/data/faq.pug
+++ b/src/data/faq.pug
@@ -45,4 +45,14 @@
             title: 'Ford Focus 2 неисправности неисправность двигателя 1.8',
             hasAnswer: true
         },
+        {
+            auto: 'Volkswagen Passat B4 1993-1997',
+            title: 'У какой модели Тойота Альфард лучше салон?',
+            hasAnswer: false
+        },
+        {
+            auto: 'Ford Focus 2 1993-1997',
+            title: 'Ford Focus 2 неисправности неисправность двигателя 1.8',
+            hasAnswer: true
+        }
     ];
