--- a/src/data/personal-area.pug
+++ b/src/data/personal-area.pug
@@ -87,7 +87,7 @@
         },
         {
             auto: 'Opel Zafira A 1999-2005',
-            title: 'Как узнать, какой не работает цилиндр на Опель Зафира А?',
+            title: 'Как узнать, какой не работает цилиндр на Опель Зафира?',
             hasAnswer: true
         },
         {
