--- a/src/blocks/components/car-selection/_car-selection.scss
+++ b/src/blocks/components/car-selection/_car-selection.scss
@@ -19,7 +19,7 @@
   &__top {
     display: flex;
     justify-content: space-between;
-    padding: 20px 30px 10px;
+    padding: 25px 30px 10px;
     box-sizing: border-box;
     @include sm-block {
       padding: 20px 12px 10px;
@@ -48,10 +48,13 @@
 
   &__text {
     margin-top: 13px;
-    margin-bottom: 6px;
+    margin-bottom: 10px;
     color: #333333;
     font-weight: normal;
     font-size: 15px;
+    &:not(:first-child) {
+      margin-top: 28px;
+    }
   }
 
   &__choice {
@@ -66,7 +69,7 @@
       border-radius: 5px;
       color: #e0e0e0;
       text-align: center;
-      padding: 8px 30px 8px 8px;
+      padding: 8px 35px 8px 8px;
       font-size: 15px;
       margin-right: 6px;
       margin-top: 6px;
