--- a/src/blocks/components/filter-search/_filter-search.scss
+++ b/src/blocks/components/filter-search/_filter-search.scss
@@ -16,9 +16,9 @@
 
 .filter-search {
   background-color: $yellow;
-  padding: 19px 26px;
+  padding: 16px 26px 25px;
   box-sizing: border-box;
-  margin-bottom: 34px;
+  margin-bottom: 40px;
 
   @include md-block {
     padding: 15px 12px;
@@ -56,6 +56,7 @@
   &__form {
     display: flex;
     flex-direction: column;
+    padding-top: 7px;
 
     &-top,
     &-bottom {
