--- a/src/blocks/components/ledger/_ledger.scss
+++ b/src/blocks/components/ledger/_ledger.scss
@@ -4,6 +4,7 @@
   border-spacing: 0 10px;
   width: 100%;
   padding-bottom: 10px;
+  margin-top: -16px;
 
   @include lg-block {
     display: block;
@@ -91,7 +92,7 @@
 
   &__item {
     display: table-cell;
-    padding: 20px 15px;
+    padding: 18px 15px;
     border-top: 1px solid #e0e0e0;
     border-bottom: 1px solid #e0e0e0;
     width: auto;
@@ -149,7 +150,7 @@
     font-size: 15px;
     color: #919191;
     padding-top: 0;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
   }
 
   &__body &__item {
