--- a/src/blocks/components/pagination/_pagination.scss
+++ b/src/blocks/components/pagination/_pagination.scss
@@ -1,5 +1,5 @@
 .pagination {
-    margin-top: 25px;
+    margin-top: 27px;
     display: flex;
 
     &__wrap {
@@ -14,6 +14,7 @@
     &__item {
         width: 40px;
         height: 40px;
+        margin-right: 4px;
 
         &:hover {
             background: $yellow;
