--- a/src/blocks/components/share/_share.scss
+++ b/src/blocks/components/share/_share.scss
@@ -8,7 +8,7 @@
         position: relative;
         font-style: normal;
         font-weight: normal;
-        font-size: 15px;
+        font-size: 18px;
         color: $base-color-text;
         padding-right: 35px;
         cursor: pointer;
@@ -28,11 +28,7 @@
             left: auto;
             bottom: 0;
             margin: auto;
-            -webkit-transition: transform 0.5s;
-            -moz-transition: transform 0.5s;
-            -ms-transition: transform 0.5s;
-            -o-transition: transform 0.5s;
-            transition: transform 0.5s;
+            @include transition(0.5s, ease, transform);
         }
     }
 
