--- a/src/blocks/modules/header/_header.scss
+++ b/src/blocks/modules/header/_header.scss
@@ -56,7 +56,6 @@
   &__center {
     display: flex;
     flex-direction: column;
-    align-items: end;
     justify-content: space-between;
     @include col();
     @include size(6);
@@ -108,6 +107,10 @@
     @include from(1025px) {
       display: block !important;
     }
+  }
+
+  & .personal-auto {
+    margin-bottom: 10px;
   }
 
   &__ask-question {
