--- a/src/blocks/modules/marks-and-models/_marks-and-models.scss
+++ b/src/blocks/modules/marks-and-models/_marks-and-models.scss
@@ -15,6 +15,7 @@
     & a {
       width: 32px;
       height: 32px;
+      margin-right: 7px;
       font-size: 18px;
       line-height: 25px;
       display: flex;
@@ -78,7 +79,7 @@
 }
 
 .marks-and-models {
-  margin-top: 35px;
+  margin-top: 30px;
   font-size: 0;
   display: flex;
   justify-content: space-between;
@@ -91,6 +92,7 @@
   }
 
   &__section {
+    margin-bottom: 25px;
     @include md-block {
       display: flex;
       margin-left: -15px;
@@ -161,7 +163,7 @@
   }
 
   &__item {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     display: inline-block;
 
     @include md-block {
@@ -171,11 +173,10 @@
     & a {
       display: inline-block;
       text-decoration: none;
-      font-weight: 500;
+      font-weight: inherit;
       font-size: 15px;
       color: $dark-gray;
       border-bottom: 3px solid transparent;
-      padding-bottom: 3px;
 
       @include md-block {
         border-bottom: 1px solid #E6E6E6;
@@ -201,9 +202,8 @@
     &.active {
 
       & a {
-        font-weight: bold;
-        border-bottom: 3px solid $yellow;
-        padding-bottom: 3px;
+        font-weight: 500;
+        border-bottom: 2px solid $yellow;
         @include md-block {
           padding-bottom: 12px;
           &:before {
@@ -238,7 +238,7 @@
     width: 100%;
     background: $white;
     box-sizing: border-box;
-    padding: 40px 10px 70px 100px;
+    padding: 40px 10px 30px 100px;
     font-size: 15px;
 
     @include md-block {
@@ -313,7 +313,7 @@
       flex: 1 0 10%;
       text-decoration: none;
       display: block;
-      margin-bottom: 25px;
+      margin-bottom: 23px;
       font-weight: normal;
       font-size: 15px;
       text-transform: uppercase;
