--- a/src/data/searching-results.pug
+++ b/src/data/searching-results.pug
@@ -1,57 +1,49 @@
 -
 	var cards = [{
 		img: "img/card.jpg",
-		title: "Замена тормозной жидкости",
+		title: "Как устранить свист ремня генератора",
 		marks: [
 			"Техобслуживание",
-			"Не техобслуживание",
-			"Не техобслуживание",
-			"Не техобслуживание",
 			"Не техобслуживание"
 		]
 
 	},{
 		img: "img/card.jpg",
-		title: "Замена тормозной жидкости",
+		title: "Замена ремня ГРМ на Chery Tiggo с двигателем Acteco 1,8",
 		marks: [
 			"Техобслуживание",
 			"Не техобслуживание"
 		]
 	},{
 		img: "img/card.jpg",
-		title: "Замена тормозной жидкости",
+		title: "Замена ремней привода ГРМ и ТНВД на Audi A6 2.5 TDI V6",
 		marks: [
-			"Техобслуживание",
-			"Не техобслуживание"
+			"Техобслуживание"
 		]
-
 	},
 	{
 		img: "img/card.jpg",
-		title: "Замена тормозной жидкости",
+		title: "Замена масла в вариаторе на Nissan Qashqai",
 		marks: [
 			"Техобслуживание",
 			"Не техобслуживание"
 		]
-
 	},
 	{
 		img: "img/card.jpg",
-		title: "Замена тормозной жидкости",
+		title: "Жидкая шумоизоляция для днища и арок",
 		marks: [
 			"Техобслуживание",
 			"Не техобслуживание"
 		]
-
 	},
 	{
 		img: "img/card.jpg",
-		title: "Замена тормозной жидкости",
+		title: "Снятие и ремонт ручки двери Лада Самара (ВАЗ 2108,09,14,15",
 		marks: [
 			"Техобслуживание",
 			"Не техобслуживание"
 		]
-
 	}];
 
 -
@@ -62,28 +54,28 @@
 			hasAnswer: true
 		},
 		{
-			auto: 'Opel Zafira A 1999-2005',
+			auto: 'Ford Focus 2 неисправности неисправность двигателя 1.8',
 			title: 'Как узнать, какой не работает цилиндр на Опель Зафира А?',
 			hasAnswer: true
 		},
 		{
-			auto: 'Volkswagen Passat B4 1993-1997',
-			title: 'Есть ли датчик освещенности за бортом на Пассат Б4?',
+			auto: 'Mazda 323 III (BF) 1985 — 1989',
+			title: 'Всё о тормозных колодках Nisshinbo! Ответы на вопросы, рекомендации специалистов',
 			hasAnswer: true
 		},
 		{
-			auto: 'Volkswagen Passat B4 1993-1997',
-			title: 'У какой модели Тойота Альфард лучше салон?',
+			auto: 'Opel Zafira A 1999-2005',
+			title: 'Как узнать, какой не работает цилиндр на Опель Зафира А?',
 			hasAnswer: false
 		},
 		{
-			auto: 'Ford Focus 2 1993-1997',
-			title: 'Ford Focus 2 неисправности неисправность двигателя 1.8',
+			auto: 'Mazda 323 III (BF) 1985 — 1989',
+			title: 'Как установить другую магнитолу на Мазда 323 БФ? ',
 			hasAnswer: true
 		},
 		{
-			auto: 'Volkswagen Passat B4 1993-1997',
-			title: 'У какой модели Тойота Альфард лучше салон?',
+			auto: 'Opel Zafira A 1999-2005',
+			title: 'Как узнать, какой не работает цилиндр на Опель Зафира А?',
 			hasAnswer: false
 		},
 	];
