--- a/src/blocks/components/filter-main/filter-main.pug
+++ b/src/blocks/components/filter-main/filter-main.pug
@@ -6,7 +6,8 @@ section.filter-main(style='background: linear-gradient(0deg, rgba(0, 0, 0, 0.2),
         .filter-main__content
             include ../car-selection/car-selection
             .filter-main__search
-                .filter-main__search-title Поиск по базе материалов
-                +search('Что вы ищете?')
+                .filter-main__search-inner
+                    .filter-main__search-title Поиск по базе материалов
+                    +search('Что вы ищете?')
 
 
