--- a/src/blocks/components/car-selection/car-selection.pug
+++ b/src/blocks/components/car-selection/car-selection.pug
@@ -2,22 +2,23 @@
     let options = ['Работы по техобслуживанию', 'test']
 
 .car-selection
-    .car-selection__top
-        .car-selection__title
-            |Выбор автомобиля
-        a(href="javascript:void(0)").car-selection__reset
-            |Сбросить
-    .car-selection__center
-        .car-selection__text Вы выбрали
-        ul.car-selection__choice
-            li легковой
-                a(href='javascript:void(0)').close
-            li Mazda
-                a(href='javascript:void(0)').close
-            li 323
-                a(href='javascript:void(0)').close
-            li III (BF), 1985 — 1989
-                a(href='javascript:void(0)').close
-        .car-selection__text Выберите область
-        include ../select/select
-        +select(options)
+    .car-selection__inner
+        .car-selection__top
+            .car-selection__title
+                |Выбор автомобиля
+            a(href="javascript:void(0)").car-selection__reset
+                |Сбросить
+        .car-selection__center
+            .car-selection__text Вы выбрали
+            ul.car-selection__choice
+                li легковой
+                    a(href='javascript:void(0)').close
+                li Mazda
+                    a(href='javascript:void(0)').close
+                li 323
+                    a(href='javascript:void(0)').close
+                li III (BF), 1985 — 1989
+                    a(href='javascript:void(0)').close
+            .car-selection__text Выберите область
+            include ../select/select
+            +select(options)
