--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,7 @@
 @import "helpers/variables";
 @import "libs";
+@import "fontawesome/fontawesome";
+@import "fontawesome/brands";
 @import "helpers/mixins";
 @import "helpers/validator";
 @import "helpers/ui-kit";
