--- a/src/blocks/modules/modals/_modals.scss
+++ b/src/blocks/modules/modals/_modals.scss
@@ -279,6 +279,7 @@
             justify-content: center;
             border: 2px solid $yellow;
             box-sizing: border-box;
+            font-size: 20px !important;
 
             &:not(:first-child) {
                 border-left: none;
