--- a/src/blocks/modules/modals/ask-question.pug
+++ b/src/blocks/modules/modals/ask-question.pug
@@ -4,6 +4,16 @@ include ../../components/select/select
         'Марка',
         'Toyota',
         'Лада',
+        'Лада',
+        'Mazda',
+        'Mazda',
+        'Mazda',
+        'Mazda',
+        'Mazda',
+        'Mazda',
+        'Mazda',
+        'Mazda',
+        'Mazda',
         'Mazda'
     ];
 
