--- a/src/blocks/modules/modals/select-car.pug
+++ b/src/blocks/modules/modals/select-car.pug
@@ -4,6 +4,15 @@ include ../../components/select/select
         'Марка',
         'Toyota',
         'Лада',
+        'Mazda',
+        'Mazda',
+        'Mazda',
+        'Mazda',
+        'Mazda',
+        'Mazda',
+        'Mazda',
+        'Mazda',
+        'Mazda',
         'Mazda'
     ];
 
