Fix bugs on adaptive

--- a/src/blocks/components/car-selection/_car-selection.scss
+++ b/src/blocks/components/car-selection/_car-selection.scss
@@ -47,7 +47,7 @@
     color: #333333;
     font-weight: normal;
     font-size: 15px;
-    text-decoration: dashed;
+    text-decoration: none;
     cursor: pointer;
     border-bottom: 0.5px dashed #333333;
 
