--- a/src/blocks/components/card/_card.scss
+++ b/src/blocks/components/card/_card.scss
@@ -80,13 +80,18 @@
   }
 
   &-list {
-    //@include row-flex();
+    $cardOffset: 40px;
+    @include u-row-flex(30px);
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+
+    @include md-block {
+      @include u-row-flex(24px);
+    }
 
     & .card {
-      //@include col();
+      @include u-col($cardOffset);
+      @include u-size(1, 3, $cardOffset);
       margin-bottom: 32px;
 
       &:nth-last-child(3),
@@ -108,11 +113,18 @@
         }
       }
 
+      @include lg-block {
+        @include u-size(1, 2, $cardOffset);
+      }
+
       @include md-block {
         margin-bottom: 30px;
+        @include u-col(30px);
+        @include u-size(1, 2, 30px);
       }
 
       @include sm-block {
+        @include u-size(1, 1, 30px);
         max-width: 100%;
 
         &:nth-last-child(3),
@@ -124,7 +136,6 @@
           margin-bottom: 0;
         }
       }
-
 
       & img {
         border-radius: 8px;
