--- a/src/blocks/components/personal-auto/_personal-auto.scss
+++ b/src/blocks/components/personal-auto/_personal-auto.scss
@@ -19,6 +19,14 @@
     &:hover {
       border-color: transparent;
     }
+
+    & span {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: inline-block;
+      max-width: 260px;
+    }
   }
 
   &:before {
