--- a/src/blocks/components/select/select.scss
+++ b/src/blocks/components/select/select.scss
@@ -71,7 +71,7 @@
   & .select2-results__option {
     font-size: 15px;
     color: #333333;
-    height: 40px;
+    line-height: 19px;
     box-sizing: border-box;
     padding: 12px 9px 12px 13px;
 
