--- a/src/blocks/modules/modals/select-car.pug
+++ b/src/blocks/modules/modals/select-car.pug
@@ -29,7 +29,7 @@ include ../../components/select/select
         'Поколение',
         '2018',
         '2016',
-        'III (BF), 1985 — 1989'
+        'III (BF), 1985 — 1989 III (BF), 1985 — 1989 III (BF), 1985 — 1989'
     ];
 
 
