--- a/src/blocks/modules/marks-and-models/_marks-and-models.scss
+++ b/src/blocks/modules/marks-and-models/_marks-and-models.scss
@@ -273,6 +273,9 @@
     height: 65px;
     left: 13px;
     top: 13px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     @include md-block {
       position: relative;
@@ -284,7 +287,7 @@
 
     & img {
       width: 100%;
-      height: 100%;
+      height: auto;
     }
   }
 
