--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -30,3 +30,5 @@ block content
 					a(href="404.html") 404
 				li
 					a(href="ui-kit.html") Ui-kit
+				li
+					a(href="technical-specification.html") Техническая спецификация
